-- documentation, see http://haskell.org/cabal/users-guide/

name:                stackage-query
version:             0.1.0
synopsis:            Stackage package query
description:         Tool to query package versions in Stackage
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           Jens Petersen
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable stackage
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base, bytestring, http-client, http-client-tls,
                       http-conduit, optparse-applicative,
                       stackage-curator, text
  -- hs-source-dirs:      
  default-language:    Haskell2010
