name:                stackage-query
version:             0.1.0
synopsis:            Stackage package query
description:         Tool to query package versions in Stackage
license:             MIT
license-file:        LICENSE
author:              Jens Petersen
maintainer:          juhpetersen@gmail.com
copyright:           Jens Petersen
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable stackage
  main-is:             Main.hs
  build-depends:       base, bytestring, filepath, http-client,
                       http-client-tls, http-conduit, optparse-applicative
  GHC-options:        -fwarn-missing-signatures -Wall
  default-language:    Haskell2010
